<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/titulo1"
        style="@style/TextViewStyle.TitleBlueDark"/>

    <TextView
        android:text="@string/titulo2"
        style="@style/TextViewStyle.TitleBlueDark"/>

    <TextView
        android:text="@string/autor1"
        android:layout_marginTop="50dp"
        style="@style/TextViewStyle"/>

    <TextView
        android:text="@string/autor2"
        style="@style/TextViewStyle"/>

    <Button
        style="@style/ButtonStyle"
        android:text="@string/botao" />

</LinearLayout>
